--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 
+@@include('components/_head.html', {title: "Главная"})
 
 <body>
+  <!-- header -->
+  @@include('components/header/_header.html')
 
+  <div class="main">
 
-  <script src="js/main.js" type="module"></script>
+  </div>
+  <!-- /.main -->
 
+  <!-- footer -->
+  @@include('components/footer/_footer.html')
 </body>
 
 </html>
